--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,22 +5,6 @@
   <!-- End Sidebar -->
 
 
-  <div class="container">
-    <div class="row p-3">
-
-      <div class="col">
-        <h5>Buscar: </h5>
-        <input type="text" class="form-control" placeholder="Buscar Gifs...">
-      </div>
-
-    </div>
-    <hr class="p1">
-
-    <div class="row">
-      <div class="col">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa illo expedita ab fugiat ut, iusto nihil aspernatur maxime, vitae eius animi nam eos dolore facere sint eligendi, numquam optio reiciendis?
-      </div>
-    </div>
-  </div>
+  <app-gifs-page class="container"></app-gifs-page>
 
 </div>
